--- a/config/crd/bases/execution.furiko.io_jobconfigs.yaml
+++ b/config/crd/bases/execution.furiko.io_jobconfigs.yaml
@@ -193,7 +193,7 @@ spec:
                           description: "Cron expression to specify how the JobConfig will be periodically scheduled. Example: \"0 0/5 * * *\". \n Supports cron schedules with optional \"seconds\" and \"years\" fields, i.e. can parse between 5 to 7 tokens. \n More information: https://github.com/furiko-io/cronexpr"
                           type: string
                         expressions:
-                          description: "List of cron expressions to specify how the JobConfig will be periodically scheduled. \n Take for example a requirement to schedule a job every day at 3AM, 3:30AM and 4AM. There is no way to represent this with a single cron expression, but we could do so with two cron expressions: \n 0/30 3 * * * 0 4 * * * \n Exactly one of Expression or Expressions must be specified. If two expressions fall on the same time, only one of them will take effect."
+                          description: "List of cron expressions to specify how the JobConfig will be periodically scheduled. \n Take for example a requirement to schedule a job every day at 3AM, 3:30AM and 4AM. There is no way to represent this with a single cron expression, but we could do so with two cron expressions: \"0/30 3 * * *\", and \"0 4 * * *\". \n Exactly one of Expression or Expressions must be specified. If two expressions fall on the same time, only one of them will take effect."
                           items:
                             type: string
                           type: array
