--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,17 +13,17 @@ jobs:
     outputs:
       go-version: ${{ steps.read-go-version.outputs.version }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - id: read-go-version
         name: Determine Go version from go.mod
-        run: echo "::set-output name=version::$(grep "go 1." go.mod | cut -d " " -f 2)"
+        run: echo "version=$(grep "go 1." go.mod | cut -d " " -f 2)" >> $GITHUB_OUTPUT
 
   golangci-lint:
     runs-on: ubuntu-latest
     needs:
       - get-go-version
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ needs.get-go-version.outputs.go-version }}
@@ -42,7 +42,7 @@ jobs:
       - get-go-version
     # NOTE(irvinlim): Need to operate in GOPATH in order for generate-groups.sh to succeed (see Makefile).
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           path: "go/src/github.com/${{ github.repository }}"
       - uses: actions/setup-go@v3
@@ -62,7 +62,7 @@ jobs:
     needs:
       - get-go-version
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v3
         with:
           go-version: ${{ needs.get-go-version.outputs.go-version }}
@@ -77,7 +77,7 @@ jobs:
     needs:
       - get-go-version
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ needs.get-go-version.outputs.go-version }}
