chore(ci): Fix goreleaser

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,16 +3,17 @@
 .gitignore
 .github/
 .local/
-bin/
+/bin/
 testbin/
-build/
-dist/
-yamls/
-config/
-docs/
-hack/
-Makefile
-LICENSE
+/build/
+/dist/
+/dist-*/
+/config/
+/docs/
+/examples/
+/hack/
+/Makefile
+/LICENSE
 *.md
 *.yaml
 *.yml
