--- a/config/execution/webhook/deployment.yaml
+++ b/config/execution/webhook/deployment.yaml
@@ -53,11 +53,11 @@ spec:
               readOnly: true
           resources:
             limits:
-              cpu: 4
-              memory: 2Gi
+              cpu: "4"
+              memory: "2Gi"
             requests:
-              cpu: 500m
-              memory: 512Mi
+              cpu: "500m"
+              memory: "512Mi"
         - name: kube-rbac-proxy
           image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
           args:
@@ -74,11 +74,11 @@ spec:
               protocol: TCP
           resources:
             limits:
-              cpu: 500m
-              memory: 128Mi
+              cpu: "500m"
+              memory: "128Mi"
             requests:
-              cpu: 5m
-              memory: 64Mi
+              cpu: "5m"
+              memory: "64Mi"
       volumes:
         - name: webhook-config
           configMap:
